--- a/examples/black_scholes_calculator.ipynb
+++ b/examples/black_scholes_calculator.ipynb
@@ -13,44 +13,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-15T21:15:37.010803Z",
-     "start_time": "2024-03-15T21:15:36.450216Z"
+     "end_time": "2024-12-15T15:31:51.528116Z",
+     "start_time": "2024-12-15T15:31:51.193687Z"
     }
    },
-   "outputs": [],
    "source": [
     "from __future__ import print_function\n",
     "from __future__ import division\n",
     "from optionlab import VERSION, get_bs_info\n",
     "import sys"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T13:51:18.074225Z",
-     "start_time": "2024-03-11T13:51:18.059531Z"
+     "end_time": "2024-12-15T15:31:57.233910Z",
+     "start_time": "2024-12-15T15:31:57.230291Z"
     }
    },
+   "source": [
+    "print(\"Python version: %s\" % sys.version)\n",
+    "print(\"OptionLab version: %s\" % VERSION)"
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python version: 3.10.13 (main, Aug 24 2023, 12:59:26) [Clang 15.0.0 (clang-1500.0.40.1)]\n",
-      "OptionLab version: 0.1.7\n"
+      "Python version: 3.12.4 | packaged by Anaconda, Inc. | (main, Jun 18 2024, 10:07:17) [Clang 14.0.6 ]\n",
+      "OptionLab version: 1.3.2\n"
      ]
     }
    ],
-   "source": [
-    "print(\"Python version: %s\" % sys.version)\n",
-    "print(\"OptionLab version: %s\" % VERSION)"
-   ]
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -63,14 +63,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T13:51:19.921321Z",
-     "start_time": "2024-03-11T13:51:19.914234Z"
+     "end_time": "2024-12-15T15:32:00.504377Z",
+     "start_time": "2024-12-15T15:32:00.501372Z"
     }
    },
-   "outputs": [],
    "source": [
     "stockprice = 100.0\n",
     "strike = 105.0\n",
@@ -78,7 +76,9 @@
     "dividendyield = 0.0\n",
     "volatility = 20.0\n",
     "days2maturity = 60"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -93,23 +93,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T13:51:23.066600Z",
-     "start_time": "2024-03-11T13:51:23.061122Z"
+     "end_time": "2024-12-15T15:32:06.030257Z",
+     "start_time": "2024-12-15T15:32:06.025597Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 1.58 ms, sys: 991 µs, total: 2.57 ms\n",
-      "Wall time: 3.03 ms\n"
-     ]
-    }
-   ],
    "source": [
     "%%time\n",
     "interestrate = interestrate / 100\n",
@@ -119,7 +108,18 @@
     "bs = get_bs_info(\n",
     "    stockprice, strike, interestrate, volatility, time_to_maturity, dividendyield\n",
     ")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.04 ms, sys: 482 μs, total: 1.53 ms\n",
+      "Wall time: 1.45 ms\n"
+     ]
+    }
+   ],
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -132,13 +132,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T13:51:26.685306Z",
-     "start_time": "2024-03-11T13:51:26.678507Z"
+     "end_time": "2024-12-15T15:32:11.811037Z",
+     "start_time": "2024-12-15T15:32:11.806570Z"
     }
    },
+   "source": [
+    "print(\"CALL\")\n",
+    "print(\"====\")\n",
+    "print(\"    Price: %.2f\" % bs.call_price)\n",
+    "print(\"    Delta: %.2f\" % bs.call_delta)\n",
+    "print(\"    Theta: %.2f\" % bs.call_theta)\n",
+    "print(\"    ITM probability: %.2f\" % (bs.call_itm_prob * 100.0))\n",
+    "print(\"\\n\")\n",
+    "print(\"PUT\")\n",
+    "print(\"===\")\n",
+    "print(\"    Price: %.2f\" % bs.put_price)\n",
+    "print(\"    Delta: %.2f\" % bs.put_delta)\n",
+    "print(\"    Theta: %.2f\" % bs.put_theta)\n",
+    "print(\"    ITM probability: %.2f\" % (bs.put_itm_prob * 100.0))\n",
+    "print(\"\\n\")\n",
+    "print(\"Gamma and Vega: %.4f \\n                %.2f\" % (bs.gamma, bs.vega))"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -165,23 +181,14 @@
      ]
     }
    ],
-   "source": [
-    "print(\"CALL\")\n",
-    "print(\"====\")\n",
-    "print(\"    Price: %.2f\" % bs.call_price)\n",
-    "print(\"    Delta: %.2f\" % bs.call_delta)\n",
-    "print(\"    Theta: %.2f\" % bs.call_theta)\n",
-    "print(\"    ITM probability: %.2f\" % (bs.call_itm_prob * 100.0))\n",
-    "print(\"\\n\")\n",
-    "print(\"PUT\")\n",
-    "print(\"===\")\n",
-    "print(\"    Price: %.2f\" % bs.put_price)\n",
-    "print(\"    Delta: %.2f\" % bs.put_delta)\n",
-    "print(\"    Theta: %.2f\" % bs.put_theta)\n",
-    "print(\"    ITM probability: %.2f\" % (bs.put_itm_prob * 100.0))\n",
-    "print(\"\\n\")\n",
-    "print(\"Gamma and Vega: %.4f \\n                %.2f\" % (bs.gamma, bs.vega))"
-   ]
+   "execution_count": 5
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -193,7 +200,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -207,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
